duniverse/menhirLib.20200211/test/static/bad/nonsense.mly
%token I DO NOT Think This Looks Like %% A Grammar, Oh Really No But This: does { () } %%
