duniverse/menhirLib.20200211/test/static/bad/nonsense.exp
File "nonsense.mly", line 1, characters 43-50:
Error: syntax error after 'A' and before 'Grammar'.
Ill-formed rule.
Either a parenthesized, comma-delimited list of formal parameters
or an attribute
or a colon ':' is expected at this point.
Examples of well-formed rules:
  main: e = expr; EOL { e }
  expr: i = INT { i } | e1 = expr; PLUS; e2 = expr { e1 + e2 }
  option(X): { None } | x = X { Some x }
  main [@cost 0]: e = expr; EOL { e }
